projects/vb6parse/snapshots/tests/library/graphics/spc/spc_select_case.snap
---
source: projects/vb6parse/tests/library/graphics/spc.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SelectCaseStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SelectKeyword
                  text: Select
                - kind: Whitespace
                  text: " "
                - kind: CaseKeyword
                  text: Case
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: value
                - kind: Newline
                  text: "\n"
                - kind: Whitespace
                  text: "        "
                - kind: CaseClause
                  children:
                    - kind: CaseKeyword
                      text: Case
                    - kind: Whitespace
                      text: " "
                    - kind: IntegerLiteral
                      text: "1"
                    - kind: Newline
                      text: "\n"
                    - kind: StatementList
                      children:
                        - kind: PrintStatement
                          children:
                            - kind: Whitespace
                              text: "            "
                            - kind: PrintKeyword
                              text: Print
                            - kind: Whitespace
                              text: " "
                            - kind: Octothorpe
                              text: "#"
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "1"
                            - kind: Comma
                              text: ","
                            - kind: Whitespace
                              text: " "
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: StringLiteralExpression
                                      children:
                                        - kind: StringLiteral
                                          text: "\"One\""
                                - kind: Semicolon
                                  text: ;
                                - kind: Whitespace
                                  text: " "
                                - kind: Argument
                                  children:
                                    - kind: CallExpression
                                      children:
                                        - kind: Identifier
                                          text: Spc
                                        - kind: LeftParenthesis
                                          text: (
                                        - kind: ArgumentList
                                          children:
                                            - kind: Argument
                                              children:
                                                - kind: NumericLiteralExpression
                                                  children:
                                                    - kind: IntegerLiteral
                                                      text: "10"
                                        - kind: RightParenthesis
                                          text: )
                                - kind: Semicolon
                                  text: ;
                                - kind: Whitespace
                                  text: " "
                                - kind: Argument
                                  children:
                                    - kind: StringLiteralExpression
                                      children:
                                        - kind: StringLiteral
                                          text: "\"Value\""
                            - kind: Newline
                              text: "\n"
                        - kind: Whitespace
                          text: "        "
                - kind: CaseClause
                  children:
                    - kind: CaseKeyword
                      text: Case
                    - kind: Whitespace
                      text: " "
                    - kind: IntegerLiteral
                      text: "2"
                    - kind: Newline
                      text: "\n"
                    - kind: StatementList
                      children:
                        - kind: PrintStatement
                          children:
                            - kind: Whitespace
                              text: "            "
                            - kind: PrintKeyword
                              text: Print
                            - kind: Whitespace
                              text: " "
                            - kind: Octothorpe
                              text: "#"
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "1"
                            - kind: Comma
                              text: ","
                            - kind: Whitespace
                              text: " "
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: StringLiteralExpression
                                      children:
                                        - kind: StringLiteral
                                          text: "\"Two\""
                                - kind: Semicolon
                                  text: ;
                                - kind: Whitespace
                                  text: " "
                                - kind: Argument
                                  children:
                                    - kind: CallExpression
                                      children:
                                        - kind: Identifier
                                          text: Spc
                                        - kind: LeftParenthesis
                                          text: (
                                        - kind: ArgumentList
                                          children:
                                            - kind: Argument
                                              children:
                                                - kind: NumericLiteralExpression
                                                  children:
                                                    - kind: IntegerLiteral
                                                      text: "10"
                                        - kind: RightParenthesis
                                          text: )
                                - kind: Semicolon
                                  text: ;
                                - kind: Whitespace
                                  text: " "
                                - kind: Argument
                                  children:
                                    - kind: StringLiteralExpression
                                      children:
                                        - kind: StringLiteral
                                          text: "\"Value\""
                            - kind: Newline
                              text: "\n"
                        - kind: Whitespace
                          text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: SelectKeyword
                  text: Select
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
